Настроен нормально gulpfile.js

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,9 +1,5 @@
 
-// bower:scss
-@import bower_components/bootstrap/scss/bootstrap-reboot.scss
-@import bower_components/bootstrap/scss/bootstrap.scss
-@import bower_components/bootstrap/scss/bootstrap-grid.scss
-// endbower
+@import "../../node_modules/bootstrap/scss/bootstrap"
 
 @import "vars"
 @import "fonts"
@@ -66,5 +62,6 @@ h1
 
 
 
-@import "media" // Always at the end
+@import "media"
+// Always at the end
 
