--- a/app/index.pug
+++ b/app/index.pug
@@ -1,3 +1,3 @@
-extends layouts/default
+extends pug/layouts/default
 block content
-    include includes/common/_header
+    include pug/includes/common/_header
