Погнала вёрстка. Почти готова домашняя страница. Но нет пока адаптива.

--- a/app/index.pug
+++ b/app/index.pug
@@ -1,3 +1,6 @@
 extends pug/layouts/default
 block content
     include pug/includes/common/_header
+    include pug/includes/home/_section-top
+    include pug/includes/home/_section-shops
+    include pug/includes/home/_section-hot
