--- a/app/pug/includes/common/_header.pug
+++ b/app/pug/includes/common/_header.pug
@@ -17,7 +17,7 @@ header
         .container
             .row
                 .col-md-4
-                    .infoLine__logo Food-courier
+                    include _logo
                 .col-md-4
                     .info
                         .info__icon.info__icon--MRight
