--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -5,3 +5,4 @@
 +font-face("ProximaNova", "../fonts/ProximaNova/RegularItalic/ProximaNova-RegularItalic", $style: italic)
 +font-face("ProximaNova", "../fonts/ProximaNova/Regular/ProximaNova-Regular")
 +font-face("VeganStyle", "../fonts/VeganStyle/VeganStyle")
++font-face("PinkBlue", "../fonts/PinkBlue/PinkBlue")
