--- a/app/pug/layouts/default.pug
+++ b/app/pug/layouts/default.pug
@@ -6,14 +6,11 @@ html(lang="")
         meta(name="viewport" content="width=device-width, initial-scale=1")
         title Food Courier
         link(rel="apple-touch-icon" href="apple-touch-icon.png")
+        link(rel="shortcut icon" href="/favicon.ico")
         // Place favicon.ico in the root directory
-        // build:css styles/main.css
         link(rel="stylesheet" href="css/main.css")
-        // endbuild
     body
         block content
         if dev
             script(src="js/vendors.js")
-        // build:js scripts/main.js
         script(src="js/main.js")
-        // endbuild
