--- a/app/sass/header/_infoLine.sass
+++ b/app/sass/header/_infoLine.sass
@@ -3,15 +3,10 @@ $icons-size: 44px
 .infoLine
   height: 90px
   &__logo
-    text-align: center
-    font-family: "VeganStyle", sans-serif
-    color: $accent
-    line-height: 88px
-    letter-spacing: 4px
-    font-size: 38px
+    height: 90px
 .info
   display: flex
-  justify-content: flex-end
+  justify-content: center
   align-items: center
   height: 100%
   &__icon
