Разделил gulpgile на части. Проверил все таски, всё работает.

--- a/app/pug/includes/home/_section-hot.pug
+++ b/app/pug/includes/home/_section-hot.pug
@@ -2,7 +2,7 @@ section.sectionHot
     .container
         .sectionHeader.sectionHeader--margin20.sectionHeader--MBottom10
             img(src='img/hot.svg' alt='Меню' class='sectionHeader__logo')
-            h1.sectionHeader__text.sectionHeader__logo--white Горячее предложение
+            h1.sectionHeader__text.sectionHeader__logo--white Горячие предложения
         .owl-carousel.owl-carousel--hot
             - var n = 0
                 while  n < 7
