добавлена секция "3 причины"

--- a/app/index.pug
+++ b/app/index.pug
@@ -4,3 +4,4 @@ block content
     include pug/includes/home/_section-top
     include pug/includes/home/_section-shops
     include pug/includes/home/_section-hot
+    include pug/includes/home/_section-causes
