--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -69,6 +69,7 @@ b, strong
 @import "content/sectionTop"
 @import "content/sectionShops"
 @import "content/sectionHot"
+@import "content/sectionCauses"
 
 
 
