--- a/app/pug/layouts/default.pug
+++ b/app/pug/layouts/default.pug
@@ -1,16 +1,11 @@
 doctype html
 html(lang="")
     head
-        meta(charset="utf-8")
-        meta(name="description" content="")
-        meta(name="viewport" content="width=device-width, initial-scale=1")
-        title Food Courier
-        link(rel="apple-touch-icon" href="apple-touch-icon.png")
-        link(rel="shortcut icon" href="/favicon.ico")
-        // Place favicon.ico in the root directory
-        link(rel="stylesheet" href="css/main.css")
+        include ../includes/common/_head
     body
         block content
         if dev
             script(src="js/vendors.js")
         script(src="js/main.js")
+        footer
+            include ../includes/common/footer
