--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -70,6 +70,7 @@ b, strong
 @import "content/sectionShops"
 @import "content/sectionHot"
 @import "content/sectionCauses"
+@import "common/footer"
 
 
 
