--- a/app/pug/includes/common/_head.pug
+++ b/app/pug/includes/common/_head.pug
@@ -2,7 +2,7 @@ meta(charset="utf-8")
 meta(name="description" content="")
 meta(name="viewport" content="width=device-width, initial-scale=1")
 title Food Courier
-link(rel="apple-touch-icon" href="apple-touch-icon.png")
-link(rel="shortcut icon" href="/favicon.ico")
+//link(rel="apple-touch-icon" href="apple-touch-icon.png")
+//link(rel="shortcut icon" href="/favicon.ico")
 // Place favicon.ico in the root directory
 link(rel="stylesheet" href="css/main.css")
