--- a/app/pug/includes/common/_header.pug
+++ b/app/pug/includes/common/_header.pug
@@ -1,17 +1,12 @@
-include _menuItems
+include menu/_menuItems
+include menu/_mobileMenu
 header
     .topLine.container-fluid
         .topLineContainer.container
-            nav.topMenu
-                ul.topMenu__list
-                    each item, index in menuItems
-                        if index === 0
-                            - var active = 'topMenu__item--active'
-                        else
-                            - active = ''
-                        li(class = ['topMenu__item'] class = active)
-                            a.topMenu__link(href="#") #{item}
-
+            .hamburger.hamburger--spin
+                .hamburger-box
+                    .hamburger-inner
+            include menu/_topMenu
             //include _searchForm
     .infoLine.header--infoLine
         .container
