--- a/app/pug/includes/common/footer.pug
+++ b/app/pug/includes/common/footer.pug
@@ -1,19 +1,10 @@
-include _menuItems
+include menu/_menuItems
 
 .navInfo
     .container
         .row
             .col-md-6
-                nav.footerMenu
-                    ul.footerMenu__list
-                        each item, index in menuItems
-                            if index === 0
-                                - var active = 'footerMenu__item--active'
-                            else
-                                - active = ''
-                            li(class = ['footerMenu__item'] class = active)
-                                a.footerMenu__link(href="#") #{item}
-
+                include menu/_footerMenu
             .col-md-3
                 .info
                     .info__icon.info__icon--MRight
