--- a/app/sass/_mixins.sass
+++ b/app/sass/_mixins.sass
@@ -3,6 +3,7 @@
     font-family: $font-family
     font-weight: $weight
     font-style: $style
+    font-display: fallback
 
     src: url('#{$file-path}.eot')
     src: url('#{$file-path}.eot?#iefix') format('embedded-opentype'),
