--- a/app/sass/header/top-line/_menu.sass
+++ b/app/sass/header/top-line/_menu.sass
@@ -16,6 +16,7 @@
     list-style-type: none
     height: 100%
     margin: 0
+    padding: 0
   &__item
     +ts(.3, bgc)
     background-color: white
@@ -37,7 +38,6 @@
       margin-left: 10px
   &__item--active
     background-color: $accent
-    .menu__link
+    .topMenu__link
       color: white
-
 
