--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,67 +1,11 @@
 
-@import "../../node_modules/bootstrap/scss/bootstrap"
-@import "../../node_modules/owl.carousel/src/scss/owl.carousel"
-
+@import "libs/libs"
 @import "vars"
 @import "fonts"
-
-::placeholder
-  color: #666
-
-::selection
-  background-color: $accent
-  color: #fff
-
-body
-  font-size: 16px
-  min-width: 320px
-  position: relative
-  line-height: 1.65
-  font-family: $PT
-  overflow-x: hidden
-  color: $text
-  input, textarea
-    border: #666 1px solid
-    outline: none
-    &:focus:required:invalid
-      border-color: red
-    &:required:valid
-      border-color: green
-
-.img-responsive
-  display: block
-  max-width: 100%
-  height: auto
-  &.img-width
-    width: 100%
-
-.text-center
-  text-align: center
-
-b, strong
-  font-weight: bold
-
-.owl-carousel
-  .owl-nav
-    font-size: 65px
-    color: #ffffff
-    line-height: 100%
-    font-weight: 900
-    .owl-prev, .owl-next
-      position: absolute
-      top: 0
-      bottom: 0
-      outline: none
-      +ts(.4, o)
-      &:hover
-        opacity: .6
-    .owl-prev
-      left: 50px
-    .owl-next
-      right: 50px
-
+@import "common/common"
 
 @import "header/top-line/menu"
+@import "header/mobileMenu"
 //@import "header/top-line/search"
 @import "header/infoLine"
 @import "common/sectionHeader"
