--- a/app/pug/includes/home/_section-hot.pug
+++ b/app/pug/includes/home/_section-hot.pug
@@ -1,7 +1,7 @@
 section.sectionHot
     .container
         .sectionHeader.sectionHeader--margin20.sectionHeader--MBottom10
-            img(src='img/hot.svg' alt='Меню' class='sectionHeader__logo')
+            img(src='img/svg/hot.svg' alt='Меню' class='sectionHeader__logo')
             h2.sectionHeader__text.sectionHeader__logo--white Горячие предложения
         .owl-carousel.owl-carousel--hot
             - var n = 0
