--- a/app/pug/includes/home/_section-shops.pug
+++ b/app/pug/includes/home/_section-shops.pug
@@ -10,7 +10,7 @@
 
 section.sectionShops
     .sectionHeader.sectionHeader--margin20
-        img(src='img/menu.svg' alt='Меню' class='sectionHeader__logo')
+        img(src='img/svg/menu.svg' alt='Меню' class='sectionHeader__logo')
         h2.sectionHeader__text.sectionHeader__logo--black Выберите заведение
     .container
         .row
