Добавил "cleanBuild.js". Поправил и протестировал build task. Поправил шрифт в логотипе

--- a/app/assets/pug/pages/index/_section-shops.pug
+++ b/app/assets/pug/pages/index/_section-shops.pug
@@ -18,5 +18,5 @@ section.sectionShops
                 - var innerStyle = "background-image: url(static/img/shops/" + img + ")"
                 .col-md-4
                     .sectionShopsItem.sectionShopsItem--bottom30(style = innerStyle)
-                        .itemOverlay
+                        .itemOverlay.itemOverlay--radius
                             .itemOverlay__text #{key}
