--- a/app/assets/sass/modules/common/_itemOverlay.sass
+++ b/app/assets/sass/modules/common/_itemOverlay.sass
@@ -17,6 +17,10 @@ $animationTime: .3
     +font(PinkBlue, $sz: 50px)
     letter-spacing: 3px
     line-height: 1.2
+  &--radius
+    border-radius: 30px
+    &:before
+      border-radius: 21px
   &--hot
     +stretch(10px)
     +font(PTSans)
