--- a/app/assets/sass/pages/index/_sectionShops.sass
+++ b/app/assets/sass/pages/index/_sectionShops.sass
@@ -2,11 +2,12 @@
   +bd(white)
   &Item
     position: relative
-    width: 100%
-    min-height: 225px
+    max-width: 100%
+    min-height: 250px
     background-size: cover
     background-position: center
     cursor: pointer
+    border-radius: 30px
     &:hover
       .itemOverlay
         opacity: .9
