--- a/app/assets/sass/pages/index/_sectionTop.sass
+++ b/app/assets/sass/pages/index/_sectionTop.sass
@@ -1,6 +1,4 @@
 .sectionTop
-  img
-    height: 420px
   .owl-carousel
     .owl-dots
       position: absolute
@@ -17,6 +15,7 @@
       .owl-dot.active
         opacity: 1
     .owl-nav
+      font-family: $roboto
       font-size: 65px
       color: #ffffff
       line-height: 100%
