--- a/app/assets/pug/modules/_header.pug
+++ b/app/assets/pug/modules/_header.pug
@@ -1,4 +1,3 @@
-include menu/_menuItems
 include menu/_mobileMenu
 header
     .topLine.container-fluid
@@ -9,7 +8,7 @@ header
             include menu/_topMenu
             //include _searchForm
     .container
-        .row.infoLine.justify-content-around
+        .row.infoLine.justify-content-end.justify-content-sm-around
             .col-3.col-lg-auto.d-none.d-md-flex.align-items-center.justify-content-center
                 +icon('logo', 'infoLine__logo')
             .col.info
