--- a/app/assets/sass/pages/index/_sectionHot.sass
+++ b/app/assets/sass/pages/index/_sectionHot.sass
@@ -38,6 +38,7 @@
       .owl-dot.active
         opacity: 1
     .owl-nav
+      font-family: $roboto
       font-size: 50px
       color: #ffffff
       line-height: 100%
