--- a/app/assets/sass/modules/header/_infoLine.sass
+++ b/app/assets/sass/modules/header/_infoLine.sass
@@ -1,11 +1,18 @@
 $icons-size: 44px
 
 .infoLine
+  position: relative
   min-height: 90px
+  margin-top: 45px
   &__logo
     fill: $accent
-    height: 70px
+    max-height: 70px
+    width: 100%
     +font($VS)
+    &--mobile
+      max-height: 40px
+      fill: white
+      letter-spacing: 3px
 
 .info
   display: flex
@@ -27,14 +34,18 @@ $icons-size: 44px
     line-height: 23px
     font-weight: bold
     font-size: 17px
+    text-align: center
     p
       margin: 0
+
++media-breakpoint-down(md)
+  .infoLine
+    margin-top: 55px
 
 +media-breakpoint-down(xs)
   .info
     margin-bottom: 10px
-    &Line
-      padding: 10px 0
+    margin-top: 10px
+    justify-content: left
     &__description
-      font-size: 14px
-      line-height: 1.4
+      text-align: left
