--- a/app/assets/sass/utils/_vars.sass
+++ b/app/assets/sass/utils/_vars.sass
@@ -10,7 +10,7 @@ $text: #333
 // Customization Bootstrap vars from "app/libs/bootstrap/scss/_variables.scss"
 $grid-gutter-width: 30px
 $grid-columns: 12
-$grid-breakpoints: (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px)
+$grid-breakpoints: (xs: 0, xm: 450px, sm: 576px, md: 768px, lg: 992px, xl: 1200px)
 $container-max-widths: (sm: 540px, md: 720px, lg: 960px, xl: 1140px)
 
 $gutter: $grid-gutter-width
