Допилил адаптив главной страницы. Не очень уверен в infoLine. Надо что-то ещё думать

--- a/app/assets/pug/modules/_footer.pug
+++ b/app/assets/pug/modules/_footer.pug
@@ -1,17 +1,17 @@
 .navInfo
     .container
         .row
-            .col-md-6
+            .col-md-6.d-none.d-md-block
                 include menu/_footerMenu
-            .col-md-3
-                .info
+            .col-md-3.col-xm.col-sm-6
+                .info.footer--info
                     .info__icon.info__icon--MRight
                         i.fas.fa-map-marker-alt
                     .info__description.text-center
                         p (068) 400-40-58
                         p (063) 132-10-80
-            .col-md-3
-                .info
+            .col-md-3.col-xm.col-sm-6
+                .info.footer--info
                     .info__icon.info__icon--MRight
                         i.far.fa-clock
                     .info__description.text-center
