--- a/app/assets/pug/modules/_header.pug
+++ b/app/assets/pug/modules/_header.pug
@@ -1,6 +1,6 @@
 include menu/_mobileMenu
 header.header
-    .topLine.container-fluid
+    .topLine.container-fluid.Fixed
         .topLineContainer.container.d-block.d-md-flex
             .topLine__mobile.d-flex.d-md-none.justify-content-start.align-items-center
                 .topLine__hamburger
