--- a/app/assets/pug/pages/index/_section-causes.pug
+++ b/app/assets/pug/pages/index/_section-causes.pug
@@ -1,5 +1,5 @@
 section.sectionCauses
-    h2.sectionHeader.sectionHeader--margin20.sectionCauses--sectionHeader 3 причины полюбить нас
+    h2.sectionHeader__text.sectionHeader--margin20.sectionCauses--sectionHeader 3 причины полюбить нас
     .container
         .row
             .col-md-4
