--- a/app/assets/pug/pages/index/_section-hot.pug
+++ b/app/assets/pug/pages/index/_section-hot.pug
@@ -7,7 +7,7 @@ section.sectionHot
             - var n = 0
                 while  n < 7
                     a(href="#" class="sectionHot__item")
-                        img(src="static/img/slider-hot/slide" + ++n + ".jpg" alt="Slide" + n)
+                        img(src="static/img/slider-hot/slide" + ++n + ".jpg" alt="Slide" + n).img-responsive
                         .itemOverlay.itemOverlay--hot
                             h3.itemOverlay__shopName Pizza Time
                             h4.itemOverlay__name Пицца "Американо"
