--- a/app/assets/sass/modules/header/_sectionHeader.sass
+++ b/app/assets/sass/modules/header/_sectionHeader.sass
@@ -16,7 +16,18 @@
   &__text
     font-size: 28px
     font-weight: bold
+    text-align: center
 .sectionHeader__logo--black
   color: #000000
 .sectionHeader__logo--white
   color: #ffffff
+
+@media (max-width: 400px)
+  .sectionHeader
+    &__text
+      font-size: 24px
+
+@media (max-width: 370px)
+  .sectionHeader
+    &__text
+      font-size: 20px
