--- a/app/assets/sass/pages/index/_sectionTop.sass
+++ b/app/assets/sass/pages/index/_sectionTop.sass
@@ -32,3 +32,9 @@
         left: 50px
       .owl-next
         right: 50px
+
++media-breakpoint-down(sm)
+  .sectionTop
+    .owl-carousel
+      .owl-dots
+        bottom: 10px
