Новая страница shopPage. Начал делать, добавил боковое меню с категориями.

--- a/app/assets/sass/pages/index/_sectionShops.sass
+++ b/app/assets/sass/pages/index/_sectionShops.sass
@@ -4,6 +4,7 @@
     position: relative
     max-width: 100%
     cursor: pointer
+    display: block
     &:hover
       .itemOverlay
         opacity: .9
