--- a/app/assets/sass/modules/common/_itemOverlay.sass
+++ b/app/assets/sass/modules/common/_itemOverlay.sass
@@ -5,13 +5,15 @@ $animationTime: .3
   +flex-center()
   background-color: #333
   opacity: 0
-  border-radius: 30px
   +ts($animationTime)
+  &--radius
+    border-radius: 30px
+    &:before
+      border-radius: 25px
   &:before
     content: ''
     +stretch()
     border: 1px solid white
-    border-radius: 25px
     +ts($animationTime)
   &__text
     text-align: center
