--- a/app/assets/sass/utils/_mixins.sass
+++ b/app/assets/sass/utils/_mixins.sass
@@ -55,7 +55,8 @@ $shortcuts: (bc: border-color, bgc: background-color, c: color, o: opacity, t: t
 // fast border
 @mixin bd($color: black)
   border: 1px solid #{$color}
-
+@mixin main-bd()
+  border: 1px solid rgba(#707070, .3)
 // flex-center
 @mixin flex-center()
   display: flex
