[shopPage] Сделал вкладку "Меню". Начал вкладку "О заведении"

--- a/app/assets/pug/modules/_footer.pug
+++ b/app/assets/pug/modules/_footer.pug
@@ -5,14 +5,14 @@
                 include menu/_footerMenu
             .col-md-3.col-xm.col-sm-6
                 .info.footer--info
-                    .info__icon.info__icon--MRight
+                    .info__icon.mr-2
                         i.fas.fa-map-marker-alt
                     .info__description.text-center
                         p (068) 400-40-58
                         p (063) 132-10-80
             .col-md-3.col-xm.col-sm-6
                 .info.footer--info
-                    .info__icon.info__icon--MRight
+                    .info__icon.mr-2
                         i.far.fa-clock
                     .info__description.text-center
                         p Ежедневно
