--- a/app/assets/pug/pages/restaraunt/tabs/_about.pug
+++ b/app/assets/pug/pages/restaraunt/tabs/_about.pug
@@ -1,17 +1,19 @@
-.row
-    .col-12.aboutDescription
-        p Хорошее заведение с такимито особенностями и фишками. Мы предлагаем что-то и обладаем такимито преимуществами.
-    .col.col-md-6.info.justify-content-start
-        .info__icon.mr-2
-            i.far.fa-clock
-        .info__description.text-left
-            p Время работы
-            p с 10:00 до 22:00
-    .col.col-md-6.info.justify-content-start
-        .info__icon.mr-2
-            i.fas.fa-map-marker-alt
-        .info__description.text-left
-            p Наш адрес
-            p г. Каменское Пр. Победы 29
-    .col-12.aboutDescription
-        p PizzaTime на карте
+.about
+    p.about__description.mb-3 Pizza Time предлагает: суши, пицца, бургеры, гарячие блюда и много другого!
+    .row
+        .col.col-md-6.info.justify-content-start
+            .info__icon.mr-2
+                i.far.fa-clock
+            .info__description.text-left
+                p Время работы
+                p с 10:00 до 22:00
+        .col.col-md-6.info.justify-content-start
+            .info__icon.mr-2
+                i.fas.fa-map-marker-alt
+            .info__description.text-left
+                p Наш адрес
+                p г. Каменское Пр. Победы 29
+    p.about__description.mt-3 PizzaTime на карте
+    .googleMap.mb-3
+        iframe.googleMap__frame(src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2638.891754408912!2d34.55748871509884!3d48.59277142732708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40dbd73ba92b4fed%3A0x13db4a00b86d8444!2z0L_RgNC-0YHQvy4g0J_QvtCx0LXQtNGLLCAzNSwg0JrQsNC80LXQvdGB0LrQvtC1LCDQlNC90LXQv9GA0L7Qv9C10YLRgNC-0LLRgdC60LDRjyDQvtCx0LvQsNGB0YLRjCwgNTE5MDA!5e0!3m2!1sru!2sua!4v1536010357277', frameborder='0', style='border:0', allowfullscreen='')
+    a.about__srcLink(href="https://www.facebook.com/dndzpizzatime/?ref=page_internal") Наша страница в Facebook
