--- a/app/assets/pug/pages/restaraunt/_head.pug
+++ b/app/assets/pug/pages/restaraunt/_head.pug
@@ -1,2 +1,2 @@
 .container-fluid
-    img(src='static/img/restaraunts/pizz-time.jpg').head__img
+    .head__img(style='background-image: url(static/img/restaraunts/pizz-time.jpg)')
