--- a/app/assets/sass/modules/common/general.sass
+++ b/app/assets/sass/modules/common/general.sass
@@ -54,3 +54,9 @@ b, strong
       left: 50px
     .owl-next
       right: 50px
+.head__img
+  min-height: 350px
+  max-height: 500px
+  width: 100%
+  background-position: center
+  background-size: cover
