[develop] Добавил страницу "about". Все бы так быстро верстались. Убрал пункты меню "Доставка" и "Оплата"

--- a/app/assets/sass/pages/restaraunt/_foodMenu.sass
+++ b/app/assets/sass/pages/restaraunt/_foodMenu.sass
@@ -11,6 +11,7 @@
         text-decoration: none
         color: #000000
       background-color: rgba(#000, .1)
+      cursor: pointer
   &__link
     display: flex
     justify-content: flex-start
